<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_product_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="csci4100.uoit.ca.a2pricebrowsing.AddProductActivity">


    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/border2"
        android:layout_width="match_parent"
        android:padding="1dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layoutName_add"
            android:background="@color/altrColorB"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblName_add"
                android:layout_weight="0.7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingLeft="5dp"
                android:textColor="@color/defaultText"
                android:text="@string/lbl_name" />

            <EditText
                android:id="@+id/editName_add"
                android:layout_weight="0.4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutDescription_add"
            android:background="@color/altrColorA"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblDescription_add"
                android:layout_weight="0.7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingLeft="5dp"
                android:textColor="@color/defaultText"
                android:text="@string/lbl_description" />

            <EditText
                android:id="@+id/editDescription_add"
                android:layout_weight="0.4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPriceDollar_add"
            android:background="@color/altrColorB"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblPriceDollar_add"
                android:layout_weight="0.7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingLeft="5dp"
                android:textColor="@color/defaultText"
                android:text="@string/lbl_price_dollar" />

            <EditText
                android:id="@+id/editPriceDollar_add"
                android:layout_weight="0.4"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBtnGroups_add"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSave"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_marginEnd="1dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorGreen"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="process"
            android:text="@string/btnSave"/>

        <Button
            android:id="@+id/btnCancel"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_marginStart="1dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorGreen"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="process"
            android:text="@string/btnCancel"/>


    </LinearLayout>
</LinearLayout>
